--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward" />
     <link rel="shortcut icon" href="bag.ico" type="image/x-icon">
     <title>TechShop</title>
 </head>
@@ -12,93 +15,139 @@
 <body>
     <header class="contenedor">
         <nav>
-            <ul class="flex-ul-container">
-                <li><a href="#">Computación</a></li>
-                <li><a href="#">Accesorios</a></li>
-                <li><a href="#">Celulares</a></li>
-                <img src="assets/img/carrito.png" alt="Carrito de compras" id="carrito">
+            <ul class="ul-container">
+                <li><a href="pages/computacion.html">Computación</a></li>
+                <li><a href="pages/accesorios.html">Accesorios</a></li>
+                <li><a href="pages/celulares.html">Celulares</a></li>
+                <img src="/assets/img/carrito.png" alt="Carrito de compras" id="carrito">
             </ul>
         </nav>
     </header>
 
     <main class="contenedor">
-        <h1>TechShop</h1>
+        <h1 class="title">TechShop</h1>
 
         <section class="flex-container">
             <h2>Notebook destacadas</h2>
-            <a href="#">Ir a la página</a>
-            <div>
-                <img src="assets/img/compu1.png" alt="Notebook 1">
-            </div>
-            <div>
-                <img src="assets/img/compu2.png" alt="Notebook 2">
-            </div>
-            <div>
-                <img src="assets/img/compu3.png" alt="Notebook 3">
-            </div>
-            <div>
-                <img src="assets/img/compu4.png" alt="Notebook 4">
-            </div>
+            <a href="pages/computacion.html">
+                Ir a la página
+                <span class="material-symbols-outlined">
+                    arrow_forward
+                </span>
+            </a>
         </section>
 
+        <!-- Carrusel Notebooks -->
+        <div id="carouselNotebooks" class="carousel slide carousel-fade">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/assets/img/compu1.png" class="d-block" alt="Notebook destacada">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/compu2.png" class="d-block" alt="Notebook destacada">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/compu3.png" class="d-block" alt="Notebook destacada">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/compu4.png" class="d-block" alt="Notebook destacada">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselNotebooks"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselNotebooks"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <!-- Accesorios -->
         <section class="flex-container">
             <h2>Accesorios destacados</h2>
-            <a href="#">Ir a la página</a>
-            <div>
-                <img src="assets/img/accesorio1.png" alt="Accesorio 1">
-            </div>
-            <div>
-                <img src="assets/img/accesorio7.png" alt="Accesorio 2">
-            </div>
-            <div>
-                <img src="assets/img/accesorio3.png" alt="Accesorio 3">
-            </div>
-            <div>
-                <img src="assets/img/accesorio4.png" alt="Accesorio 4">
-            </div>
+            <a href="pages/accesorios.html">
+                Ir a la página
+                <span class="material-symbols-outlined">arrow_forward</span>
+            </a>
         </section>
 
+        <!-- Carrusel Accesorios -->
+        <div id="carouselAccesorios" class="carousel slide carousel-fade">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/assets/img/accesorio1.png" class="d-block" alt="Accesorio destacado">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/accesorio2.png" class="d-block" alt="Accesorio destacado">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/accesorio3.png" class="d-block" alt="Accesorio destacado">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/accesorio4.png" class="d-block" alt="Accesorio destacado">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselAccesorios"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselAccesorios"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <!-- Celulares -->
         <section class="flex-container">
             <h2>Celulares destacados</h2>
-            <a href="#">Ir a la página</a>
-            <div>
-                <img src="assets/img/celu1.png" alt="Celular 1">
-            </div>
-            <div>
-                <img src="assets/img/celu2.png" alt="Celular 2">
-            </div>
-            <div>
-                <img src="assets/img/celu3.png" alt="Celular 3">
-            </div>
-            <div>
-                <img src="assets/img/accesorio4.png" alt="Celular 4">
-            </div>
+            <a href="pages/celulares.html">
+                Ir a la página
+                <span class="material-symbols-outlined">arrow_forward</span>
+            </a>
         </section>
 
-        <!-- <section class="grid-container">
-            <div>
-                <img src="assets/img/" alt="">
+        <!-- Carrusel Celulares -->
+        <div id="carouselCelulares" class="carousel slide carousel-fade">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/assets/img/celu1.png" class="d-block" alt="Celular destacado">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/celu2.png" class="d-block" alt="Celular destacado">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/celu3.png" class="d-block" alt="Celular destacado">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/celu4.png" class="d-block" alt="Celular destacado">
+                </div>
             </div>
-            <div>
-                <img src="assets/img/" alt="">
-            </div>
-            <div>
-                <img src="assets/img/" alt="">
-            </div>
-            <div>
-                <img src="assets/img/" alt="">
-            </div>
-            <div>
-                <img src="assets/img/" alt="">
-            </div>
-            <div>
-                <img src="assets/img/" alt="">
-            </div>
-        </section> -->
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselCelulares"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselCelulares"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
     </main>
 
-    <footer class="contenedor">&copy;Facundo D'Addese | 2025</footer>
+    <footer class="contenedor footer">
+        <p>
+            E-commerce realizado por &copy;<a href="https://www.linkedin.com/in/facundo-d-addese-797b241aa/"
+                target="_blank">Facundo D'Addese</a> | 2025
+        </p>
+    </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/index.js"></script>
 </body>
 
