--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward" />
-    <link rel="shortcut icon" href="bag.ico" type="image/x-icon">
     <title>TechShop</title>
+    <link rel="shortcut icon" href="shop.ico" type="image/x-icon">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="style/style.css">
 </head>
 
 <body>
@@ -38,16 +39,17 @@
         </section>
 
         <!-- Carrusel Notebooks -->
-        <div id="carouselNotebooks" class="carousel slide carousel-fade">
+        <div id="carouselNotebooks" class="carousel slide carousel-fade" data-bs-ride="carousel"
+            data-bs-interval="3000" data-bs-pause="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/assets/img/compu1.png" class="d-block" alt="Notebook destacada">
-                </div>
-                <div class="carousel-item">
-                    <img src="/assets/img/compu2.png" class="d-block" alt="Notebook destacada">
-                </div>
-                <div class="carousel-item">
                     <img src="/assets/img/compu3.png" class="d-block" alt="Notebook destacada">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/compu7.png" class="d-block" alt="Notebook destacada">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/compu5.png" class="d-block" alt="Notebook destacada">
                 </div>
                 <div class="carousel-item">
                     <img src="/assets/img/compu4.png" class="d-block" alt="Notebook destacada">
@@ -65,43 +67,6 @@
             </button>
         </div>
 
-        <!-- Accesorios -->
-        <section class="flex-container">
-            <h2>Accesorios destacados</h2>
-            <a href="pages/accesorios.html">
-                Ir a la página
-                <span class="material-symbols-outlined">arrow_forward</span>
-            </a>
-        </section>
-
-        <!-- Carrusel Accesorios -->
-        <div id="carouselAccesorios" class="carousel slide carousel-fade">
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="/assets/img/accesorio1.png" class="d-block" alt="Accesorio destacado">
-                </div>
-                <div class="carousel-item">
-                    <img src="/assets/img/accesorio2.png" class="d-block" alt="Accesorio destacado">
-                </div>
-                <div class="carousel-item">
-                    <img src="/assets/img/accesorio3.png" class="d-block" alt="Accesorio destacado">
-                </div>
-                <div class="carousel-item">
-                    <img src="/assets/img/accesorio4.png" class="d-block" alt="Accesorio destacado">
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselAccesorios"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselAccesorios"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-
         <!-- Celulares -->
         <section class="flex-container">
             <h2>Celulares destacados</h2>
@@ -112,7 +77,8 @@
         </section>
 
         <!-- Carrusel Celulares -->
-        <div id="carouselCelulares" class="carousel slide carousel-fade">
+        <div id="carouselCelulares" class="carousel slide carousel-fade" data-bs-ride="carousel"
+            data-bs-interval="3000" data-bs-pause="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="/assets/img/celu1.png" class="d-block" alt="Celular destacado">
@@ -121,7 +87,7 @@
                     <img src="/assets/img/celu2.png" class="d-block" alt="Celular destacado">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/celu3.png" class="d-block" alt="Celular destacado">
+                    <img src="/assets/img/celu5.png" class="d-block" alt="Celular destacado">
                 </div>
                 <div class="carousel-item">
                     <img src="/assets/img/celu4.png" class="d-block" alt="Celular destacado">
@@ -137,6 +103,42 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
+        </div>
+
+        <!-- Accesorios -->
+        <section class="flex-container">
+            <h2>Accesorios destacados</h2>
+            <a href="pages/accesorios.html">
+                Ir a la página
+                <span class="material-symbols-outlined">arrow_forward</span>
+            </a>
+        </section>
+
+        <!-- Carrusel Accesorios -->
+        <div id="carouselAccesorios" class="carousel slide carousel-fade" data-bs-ride="carousel"
+            data-bs-interval="3000" data-bs-pause="false">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="/assets/img/accesorio2.png" class="d-block" alt="Accesorio destacado">
+            </div>
+            <div class="carousel-item">
+                <img src="/assets/img/accesorio1.png" class="d-block" alt="Accesorio destacado">
+            </div>
+            <div class="carousel-item">
+                <img src="/assets/img/accesorio3.png" class="d-block" alt="Accesorio destacado">
+            </div>
+            <div class="carousel-item">
+                <img src="/assets/img/accesorio4.png" class="d-block" alt="Accesorio destacado">
+            </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselAccesorios" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselAccesorios" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+        </button>
         </div>
     </main>
 
