agregue archivos .css para cada una de las secciones

--- a/pages/celulares.html
+++ b/pages/celulares.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>TechShop | Celulares</title>
+    <link rel="shortcut icon" href="/shop.ico" type="image/x-icon">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/style/style.css">
-    <link rel="shortcut icon" href="/bag.ico" type="image/x-icon">
-    <title>TechShop  | Celulares</title>
+    <link rel="stylesheet" href="/style/celulares.css">
 </head>
 
 <body>
     <header class="contenedor">
         <nav>
-            <ul class="flex-ul-container">
+            <ul class="ul-container">
                 <li><a href="computacion.html">Computación</a></li>
                 <li><a href="accesorios.html">Accesorios</a></li>
                 <li><a href="/index.html">Inicio</a></li>
@@ -21,6 +26,13 @@
         </nav>
     </header>
     
-    <footer class="contenedor">&copy;Facundo D'Addese | 2025</footer>
+    <footer class="contenedor footer">
+        <p>
+            E-commerce realizado por &copy;<a href="https://www.linkedin.com/in/facundo-d-addese-797b241aa/"
+                target="_blank">Facundo D'Addese</a> | 2025
+        </p>
+    </footer>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
