--- a/pages/computacion.html
+++ b/pages/computacion.html
@@ -4,15 +4,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="shortcut icon" href="/bag.ico" type="image/x-icon">
     <title>TechShop | Computación</title>
+    <link rel="shortcut icon" href="/shop.ico" type="image/x-icon">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/style/style.css">
+    <link rel="stylesheet" href="/style/computacion.css">
 </head>
 
 <body>
     <header class="contenedor">
         <nav>
-            <ul class="flex-ul-container">
+            <ul class="ul-container">
                 <li><a href="/index.html">Inicio</a></li>
                 <li><a href="accesorios.html">Accesorios</a></li>
                 <li><a href="celulares.html">Celulares</a></li>
@@ -20,7 +25,46 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section>
+            <div>
+                <img src="/assets/img/compu1.png" alt="Notebook en stock">
+            </div>
+            <div>
+                <img src="/assets/img/compu2.png" alt="Notebook en stock">
+            </div>
+            <div>
+                <img src="/assets/img/compu3.png" alt="Notebook en stock">
+            </div>
+            <div>
+                <img src="/assets/img/compu4.png" alt="Notebook en stock">
+            </div>
+            <div>
+                <img src="/assets/img/compu5.png" alt="Notebook en stock">
+            </div>
+            <div>
+                <img src="/assets/img/compu6.png" alt="Notebook en stock">
+            </div>
+            <div>
+                <img src="/assets/img/compu7.png" alt="Notebook en stock">
+            </div>
+            <div>
+                <img src="/assets/img/compu8.png" alt="Notebook en stock">
+            </div>
+            <div>
+                <img src="/assets/img/compu9.png" alt="Notebook en stock">
+            </div>
+        </section>
+    </main>
     
-    <footer class="contenedor">&copy;Facundo D'Addese | 2025</footer>
+    <footer class="contenedor footer">
+        <p>
+            E-commerce realizado por &copy;<a href="https://www.linkedin.com/in/facundo-d-addese-797b241aa/"
+                target="_blank">Facundo D'Addese</a> | 2025
+        </p>
+    </footer>
+
+    <script src="js/index.js"></script>
 </body>
 </html>
