terminado el css correspondiente para cada seccion, solo resta darle vida al ecommerce

--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechShop | Accesorios</title>
+    <title>Accesorios | TechShop</title>
     <link rel="shortcut icon" href="/shop.ico" type="image/x-icon">
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward"
@@ -25,6 +25,64 @@
             </ul>
         </nav>
     </header>
+
+    <main class="contenedor">
+        <section class="flex-container">
+            <div class="card">
+                <img src="/assets/img/accesorio1.png" alt="Accesorio en stock">
+                <h5>Teclado gamer Redragon Kumara color negro con luz RGB</h5>
+                <h6>$ 55.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/accesorio2.png" alt="Accesorio en stock">
+                <h5>Auriculares Inalámbricos Bluetooth Sony WH-CH520 Negro</h5>
+                <h6>$ 65.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/accesorio3.png" alt="Accesorio en stock">
+                <h5>Audífonos Jbl Tune 520bt Inalámbricos Bluetooth 5.3 Azul</h5>
+                <h6>$ 52.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/accesorio4.png" alt="Accesorio en stock">
+                <h5>Gabinete Gamer Sentey H12 Black 4 Fan Frgb Color Negro</h5>
+                <h6>$ 60.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/accesorio5.png" alt="Accesorio en stock">
+                <h5>Mouse Gamer Havit Ms1029 Rgb Negro</h5>
+                <h6>$ 11.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/accesorio6.png" alt="Accesorio en stock">
+                <h5>Kit Teclado Y Mouse Inalambrico Mk235 Logitech Color Grafito</h5>
+                <h6>$ 35.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/accesorio7.png" alt="Accesorio en stock">
+                <h5>Kit de teclado y mouse gamer Noga NKB-407 Español España de color negro</h5>
+                <h6>$ 27.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/accesorio8.png" alt="Accesorio en stock">
+                <h5>Mouse Y Teclado Gaming Dynacom Retroiluminado Antighosting</h5>
+                <h6>$ 30.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/accesorio9.png" alt="Accesorio en stock">
+                <h5>Kit Gamer Teclado Mouse Auricular Pad Combo Rosa Noga</h5>
+                <h6>$ 26.000</h6>
+            </div>
+        </section>
+    </main>
     
     <footer class="contenedor footer">
         <p>
