--- a/pages/celulares.html
+++ b/pages/celulares.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>TechShop | Celulares</title>
+    <title>Celulares | TechShop</title>
     <link rel="shortcut icon" href="/shop.ico" type="image/x-icon">
     <link
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward"
@@ -25,7 +25,65 @@
             </ul>
         </nav>
     </header>
-    
+
+    <main class="contenedor">
+        <section class="flex-container">
+            <div class="card">
+                <img src="/assets/img/celu1.png" alt="Celular en stock">
+                <h5>Celular Tcl 505 4+4gb RAM +128gb Space Gray</h5>
+                <h6>$ 148.999</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/celu2.png" alt="Celular en stock">
+                <h5>Motorola Moto E14 64GB Gris 2GB RAM</h5>
+                <h6>$ 132.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/celu3.png" alt="Celular en stock">
+                <h5>Xiaomi Redmi Note 13 Pro 5G Dual SIM 512 GB Negro estelar 12 GB RAM</h5>
+                <h6>$ 593.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/celu4.png" alt="Celular en stock">
+                <h5>Tcl 50 5g 256gb 6+6gb Alta Resolución Space Gray</h5>
+                <h6>$ 259.999</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/celu5.png" alt="Celular en stock">
+                <h5>Samsung Galaxy S24 Fe 256gb 8gb 5g Grey</h5>
+                <h6>$ 1.200.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/celu6.png" alt="Celular en stock">
+                <h5>Celular Motorola Moto G15 128/4gb Ram</h5>
+                <h6>$ 221.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/celu7.png" alt="Celular en stock">
+                <h5>Celular Samsung Galaxy A15 128/4gb Ram</h5>
+                <h6>$ 295.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/celu8.png" alt="Celular en stock">
+                <h5>Motorola Moto G15 4 + 128 Gb Gris</h5>
+                <h6>$ 210.000</h6>
+            </div>
+
+            <div class="card">
+                <img src="/assets/img/celu9.png" alt="Celular en stock">
+                <h5>Samsung Galaxy A15 128 GB Azul claro 4 GB RAM</h5>
+                <h6>$ 260. 000</h6>
+            </div>
+        </section>
+    </main>
+
     <footer class="contenedor footer">
         <p>
             E-commerce realizado por &copy;<a href="https://www.linkedin.com/in/facundo-d-addese-797b241aa/"
@@ -35,4 +93,5 @@
 
     <script src="js/index.js"></script>
 </body>
+
 </html>
