--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TechShop</title>
     <link rel="shortcut icon" href="shop.ico" type="image/x-icon">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="/style/index.css">
@@ -18,10 +16,19 @@
     <header class="contenedor">
         <nav>
             <ul class="ul-container">
-                <li><a href="pages/computacion.html">Computación</a></li>
-                <li><a href="pages/accesorios.html">Accesorios</a></li>
+                <li><a href="pages/notebooks.html">Notebooks</a></li>
                 <li><a href="pages/celulares.html">Celulares</a></li>
-                <img src="/assets/img/carrito.png" alt="Carrito de compras" id="carrito">
+                <li><a href="pages/accesorios.html">Accesorios</a></li>
+                <div id="carrito-container" class="carrito-container">
+                    <img src="/assets/img/carrito.png" alt="Carrito de compras" id="carrito">
+                    <span id="contador" class="span-productos">0</span>
+
+                    <div class="barra-lateral" id="barra-lateral">
+                        <span class="material-symbols-outlined close">close</span>
+                        <p id="mensaje-carrito"></p>
+                    </div>
+                </div>
+                <div id="overlay" class="overlay"></div>
             </ul>
         </nav>
     </header>
@@ -30,8 +37,8 @@
         <h1 class="title">TechShop</h1>
 
         <section class="flex-container">
-            <h2>Notebook destacadas</h2>
-            <a href="pages/computacion.html">
+            <h2>Notebooks destacadas</h2>
+            <a href="pages/notebooks.html">
                 Ir a la página
                 <span class="material-symbols-outlined">
                     arrow_forward
@@ -40,17 +47,17 @@
         </section>
 
         <!-- Carrusel Notebooks -->
-        <div id="carouselNotebooks" class="carousel slide carousel-fade" data-bs-ride="carousel"
-            data-bs-interval="3000" data-bs-pause="false">
+        <div id="carouselNotebooks" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3000"
+            data-bs-pause="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/assets/img/compu3.png" class="d-block" alt="Notebook destacada">
-                </div>
-                <div class="carousel-item">
-                    <img src="/assets/img/compu7.png" class="d-block" alt="Notebook destacada">
+                    <img src="/assets/img/compu1.png" class="d-block" alt="Notebook destacada">
                 </div>
                 <div class="carousel-item">
                     <img src="/assets/img/compu5.png" class="d-block" alt="Notebook destacada">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/compu7.png" class="d-block" alt="Notebook destacada">
                 </div>
                 <div class="carousel-item">
                     <img src="/assets/img/compu9.png" class="d-block" alt="Notebook destacada">
@@ -78,8 +85,8 @@
         </section>
 
         <!-- Carrusel Celulares -->
-        <div id="carouselCelulares" class="carousel slide carousel-fade" data-bs-ride="carousel"
-            data-bs-interval="3000" data-bs-pause="false">
+        <div id="carouselCelulares" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="3000"
+            data-bs-pause="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="/assets/img/celu1.png" class="d-block" alt="Celular destacado">
@@ -118,28 +125,30 @@
         <!-- Carrusel Accesorios -->
         <div id="carouselAccesorios" class="carousel slide carousel-fade" data-bs-ride="carousel"
             data-bs-interval="3000" data-bs-pause="false">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="/assets/img/accesorio2.png" class="d-block" alt="Accesorio destacado">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="/assets/img/accesorio2.png" class="d-block" alt="Accesorio destacado">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/accesorio1.png" class="d-block" alt="Accesorio destacado">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/accesorio3.png" class="d-block" alt="Accesorio destacado">
+                </div>
+                <div class="carousel-item">
+                    <img src="/assets/img/accesorio4.png" class="d-block" alt="Accesorio destacado">
+                </div>
             </div>
-            <div class="carousel-item">
-                <img src="/assets/img/accesorio1.png" class="d-block" alt="Accesorio destacado">
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/img/accesorio3.png" class="d-block" alt="Accesorio destacado">
-            </div>
-            <div class="carousel-item">
-                <img src="/assets/img/accesorio4.png" class="d-block" alt="Accesorio destacado">
-            </div>
-        </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselAccesorios" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselAccesorios" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-        </button>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselAccesorios"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselAccesorios"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </main>
 
@@ -151,7 +160,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="js/carrito.js"></script>
 </body>
 
 </html>
