--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accesorios | TechShop</title>
     <link rel="shortcut icon" href="/shop.ico" type="image/x-icon">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=arrow_forward"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="/style/accesorios.css">
@@ -18,10 +16,19 @@
     <header class="contenedor">
         <nav>
             <ul class="ul-container">
-                <li><a href="computacion.html">Computación</a></li>
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="notebooks.html">Notebooks</a></li>
                 <li><a href="celulares.html">Celulares</a></li>
-                <img src="/assets/img/carrito.png" alt="Carrito de compras" id="carrito">
+                <li><a href="/index.html">Inicio</a></li>
+                <div id="carrito-container" class="carrito-container">
+                    <img src="/assets/img/carrito.png" alt="Carrito de compras" id="carrito">
+                    <span id="contador" class="span-productos">0</span>
+
+                    <div class="barra-lateral" id="barra-lateral">
+                        <span class="material-symbols-outlined close">close</span>
+                        <p id="mensaje-carrito"></p>
+                    </div>
+                </div>
+                <div id="overlay" class="overlay"></div>
             </ul>
         </nav>
     </header>
@@ -83,7 +90,7 @@
             </div>
         </section>
     </main>
-    
+
     <footer class="contenedor footer">
         <p>
             E-commerce realizado por &copy;<a href="https://www.linkedin.com/in/facundo-d-addese-797b241aa/"
@@ -91,7 +98,7 @@
         </p>
     </footer>
 
-    <script src="js/index.js"></script>
+    <script src="/js/carrito.js"></script>
 </body>
 
 </html>
