--- a/pages/celulares.html
+++ b/pages/celulares.html
@@ -8,6 +8,7 @@
     <link rel="shortcut icon" href="/shop.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <link rel="stylesheet" href="/style/style.css">
     <link rel="stylesheet" href="/style/celulares.css">
 </head>
@@ -19,15 +20,17 @@
                 <li><a href="notebooks.html">Notebooks</a></li>
                 <li><a href="/index.html">Inicio</a></li>
                 <li><a href="accesorios.html">Accesorios</a></li>
+                
                 <div id="carrito-container" class="carrito-container">
                     <img src="/assets/img/carrito.png" alt="Carrito de compras" id="carrito">
-                    <span id="contador" class="span-productos">0</span>
+                    <span id="contador" class="span-productos"></span>
 
                     <div class="barra-lateral" id="barra-lateral">
                         <span class="material-symbols-outlined close">close</span>
                         <p id="mensaje-carrito"></p>
                     </div>
                 </div>
+
                 <div id="overlay" class="overlay"></div>
             </ul>
         </nav>
@@ -89,6 +92,22 @@
                 <h6>$ 260. 000</h6>
             </div>
         </section>
+
+        <div id="productos" class="productos-contenedor">
+            <span class="material-symbols-outlined close">close</span>
+
+            <div class="producto-detalle">
+                <div class="producto-img">
+                    <img id="producto-img" src="" alt="Notebook en stock" class="img-producto">
+                </div>
+
+                <div class="producto-info">
+                    <h5 id="producto-titulo" class="producto-titulo"></h5>
+                    <h6 id="producto-precio" class="producto-precio"></h6>
+                    <button id="btn" class="btn-producto">Agregar a carrito</button>
+                </div>
+            </div>
+        </div>
     </main>
 
     <footer class="contenedor footer">
