--- a/pages/celulares.html
+++ b/pages/celulares.html
@@ -27,7 +27,7 @@
 
                     <div class="barra-lateral" id="barra-lateral">
                         <span class="material-symbols-outlined close">close</span>
-                        <p id="mensaje-carrito"></p>
+                        <p id="mensaje-carrito" class="empty-carrito full-carrito"></p>
                     </div>
                 </div>
 
@@ -104,7 +104,7 @@
                 <div class="producto-info">
                     <h5 id="producto-titulo" class="producto-titulo"></h5>
                     <h6 id="producto-precio" class="producto-precio"></h6>
-                    <button id="btn" class="btn-producto">Agregar a carrito</button>
+                    <button id="btn-agregar" class="btn-producto">Agregar a carrito</button>
                 </div>
             </div>
         </div>
