--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style/style.css">
-    <link rel="stylesheet" href="/style/index.css">
+    <link rel="stylesheet" href="style/index.css">
 </head>
 
 <body>
@@ -21,7 +21,7 @@
                 <li><a href="pages/accesorios.html">Accesorios</a></li>
 
                 <div id="carrito-container" class="carrito-container">
-                    <img src="/assets/img/carrito.png" alt="Carrito de compras" id="carrito">
+                    <img src="assets/img/carrito.png" alt="Carrito de compras" id="carrito">
                     <span id="contador" class="span-productos">0</span>
 
                     <div class="barra-lateral" id="barra-lateral">
@@ -53,16 +53,16 @@
             data-bs-pause="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/assets/img/compu1.png" class="d-block" alt="Notebook destacada">
+                    <img src="assets/img/compu1.png" class="d-block" alt="Notebook destacada">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/compu5.png" class="d-block" alt="Notebook destacada">
+                    <img src="assets/img/compu5.png" class="d-block" alt="Notebook destacada">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/compu7.png" class="d-block" alt="Notebook destacada">
+                    <img src="assets/img/compu7.png" class="d-block" alt="Notebook destacada">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/compu9.png" class="d-block" alt="Notebook destacada">
+                    <img src="assets/img/compu9.png" class="d-block" alt="Notebook destacada">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselNotebooks"
@@ -91,16 +91,16 @@
             data-bs-pause="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/assets/img/celu1.png" class="d-block" alt="Celular destacado">
+                    <img src="assets/img/celu1.png" class="d-block" alt="Celular destacado">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/celu2.png" class="d-block" alt="Celular destacado">
+                    <img src="assets/img/celu2.png" class="d-block" alt="Celular destacado">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/celu3.png" class="d-block" alt="Celular destacado">
+                    <img src="assets/img/celu3.png" class="d-block" alt="Celular destacado">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/celu4.png" class="d-block" alt="Celular destacado">
+                    <img src="assets/img/celu4.png" class="d-block" alt="Celular destacado">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselCelulares"
@@ -129,16 +129,16 @@
             data-bs-interval="3000" data-bs-pause="false">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="/assets/img/accesorio2.png" class="d-block" alt="Accesorio destacado">
+                    <img src="assets/img/accesorio2.png" class="d-block" alt="Accesorio destacado">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/accesorio1.png" class="d-block" alt="Accesorio destacado">
+                    <img src="assets/img/accesorio1.png" class="d-block" alt="Accesorio destacado">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/accesorio3.png" class="d-block" alt="Accesorio destacado">
+                    <img src="assets/img/accesorio3.png" class="d-block" alt="Accesorio destacado">
                 </div>
                 <div class="carousel-item">
-                    <img src="/assets/img/accesorio4.png" class="d-block" alt="Accesorio destacado">
+                    <img src="assets/img/accesorio4.png" class="d-block" alt="Accesorio destacado">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselAccesorios"
