--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -9,8 +9,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="stylesheet" href="/style/accesorios.css">
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/accesorios.css">
 </head>
 
 <body>
@@ -19,15 +19,32 @@
             <ul class="ul-container">
                 <li><a href="notebooks.html">Notebooks</a></li>
                 <li><a href="celulares.html">Celulares</a></li>
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
 
                 <div id="carrito-container" class="carrito-container">
-                    <img src="/assets/img/carrito.png" alt="Carrito de compras" id="carrito">
+                    <img src="../assets/img/carrito.png" alt="Carrito de compras" id="carrito">
                     <span id="contador" class="span-productos"></span>
 
                     <div class="barra-lateral" id="barra-lateral">
                         <span class="material-symbols-outlined close">close</span>
                         <p id="mensaje-carrito" class="empty-carrito full-carrito"></p>
+
+                        <div id="grid-carrito" class="grid-container oculto">
+                            <img src="" alt="Producto seleccionado">
+                            <h5></h5>
+
+                            <div id="contador-cantidad"
+                                class="d-flex align-items-center justify-content-between rounded-pill border px-3 py-1"
+                                style="width: 100px;">
+                                <span id="btn-menos" style="cursor: pointer; font-size: 20px;">−</span>
+                                <span id="valor-cantidad" class="fw-semibold">1</span>
+                                <span id="btn-mas" style="cursor: pointer; font-size: 20px;">+</span>
+                            </div>
+                            
+                            <h6></h6>
+                            <button id="vaciar" class="btn-vaciar">Vaciar carrito</button>
+                            <button id="finalizar" class="btn-finalizar">Finalizar compra</button>
+                        </div>
                     </div>
                 </div>
 
@@ -39,55 +56,55 @@
     <main class="contenedor">
         <section class="flex-container">
             <div class="card">
-                <img src="/assets/img/accesorio1.png" alt="Accesorio en stock">
+                <img src="../assets/img/accesorio1.png" alt="Accesorio en stock">
                 <h5>Teclado gamer Redragon Kumara color negro con luz RGB</h5>
                 <h6>$ 55.000</h6>
             </div>
 
             <div class="card">
-                <img src="/assets/img/accesorio2.png" alt="Accesorio en stock">
+                <img src="../assets/img/accesorio2.png" alt="Accesorio en stock">
                 <h5>Auriculares Inalámbricos Bluetooth Sony WH-CH520 Negro</h5>
                 <h6>$ 65.000</h6>
             </div>
 
             <div class="card">
-                <img src="/assets/img/accesorio3.png" alt="Accesorio en stock">
+                <img src="../assets/img/accesorio3.png" alt="Accesorio en stock">
                 <h5>Audífonos Jbl Tune 520bt Inalámbricos Bluetooth 5.3 Azul</h5>
                 <h6>$ 52.000</h6>
             </div>
 
             <div class="card">
-                <img src="/assets/img/accesorio4.png" alt="Accesorio en stock">
+                <img src="../assets/img/accesorio4.png" alt="Accesorio en stock">
                 <h5>Gabinete Gamer Sentey H12 Black 4 Fan Frgb Color Negro</h5>
                 <h6>$ 60.000</h6>
             </div>
 
             <div class="card">
-                <img src="/assets/img/accesorio5.png" alt="Accesorio en stock">
+                <img src="../assets/img/accesorio5.png" alt="Accesorio en stock">
                 <h5>Mouse Gamer Havit Ms1029 Rgb Negro</h5>
                 <h6>$ 11.000</h6>
             </div>
 
             <div class="card">
-                <img src="/assets/img/accesorio6.png" alt="Accesorio en stock">
+                <img src="../assets/img/accesorio6.png" alt="Accesorio en stock">
                 <h5>Kit Teclado Y Mouse Inalambrico Mk235 Logitech Color Grafito</h5>
                 <h6>$ 35.000</h6>
             </div>
 
             <div class="card">
-                <img src="/assets/img/accesorio7.png" alt="Accesorio en stock">
+                <img src="../assets/img/accesorio7.png" alt="Accesorio en stock">
                 <h5>Kit de teclado y mouse gamer Noga NKB-407 Español España de color negro</h5>
                 <h6>$ 27.000</h6>
             </div>
 
             <div class="card">
-                <img src="/assets/img/accesorio8.png" alt="Accesorio en stock">
+                <img src="../assets/img/accesorio8.png" alt="Accesorio en stock">
                 <h5>Mouse Y Teclado Gaming Dynacom Retroiluminado Antighosting</h5>
                 <h6>$ 30.000</h6>
             </div>
 
             <div class="card">
-                <img src="/assets/img/accesorio9.png" alt="Accesorio en stock">
+                <img src="../assets/img/accesorio9.png" alt="Accesorio en stock">
                 <h5>Kit Gamer Teclado Mouse Auricular Pad Combo Rosa Noga</h5>
                 <h6>$ 26.000</h6>
             </div>
@@ -105,6 +122,7 @@
                     <h5 id="producto-titulo" class="producto-titulo"></h5>
                     <h6 id="producto-precio" class="producto-precio"></h6>
                     <button id="btn-agregar" class="btn-producto">Agregar a carrito</button>
+                    <button id="btn-eliminar" class="btn-producto">Eliminar del carrito</button>
                 </div>
             </div>
         </div>
