--- a/pages/notebooks.html
+++ b/pages/notebooks.html
@@ -9,20 +9,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <link rel="stylesheet" href="/style/style.css">
-    <link rel="stylesheet" href="/style/notebooks.css">
+    <link rel="stylesheet" href="../style/style.css">
+    <link rel="stylesheet" href="../style/notebooks.css">
 </head>
 
 <body>
     <header class="contenedor">
         <nav>
             <ul class="ul-container">
-                <li><a href="/index.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="celulares.html">Celulares</a></li>
                 <li><a href="accesorios.html">Accesorios</a></li>
 
                 <div id="carrito-container" class="carrito-container">
-                    <img src="/assets/img/carrito.png" alt="Carrito de compras" id="carrito">
+                    <img src="../assets/img/carrito.png" alt="Carrito de compras" id="carrito">
                     <span id="contador" class="span-productos"></span>
 
                     <div class="barra-lateral" id="barra-lateral">
@@ -56,55 +56,55 @@
     <main class="contenedor">
         <section class="flex-container">
             <div class="card oculto">
-                <img src="/assets/img/compu1.png" alt="Notebook en stock">
+                <img src="../assets/img/compu1.png" alt="Notebook en stock">
                 <h5>Notebook Aspire Go Intel i3, DDR5 8Gb Ram, 128Gb SSD, Pantalla 15.6" Full HD, Windows 11</h5>
                 <h6>$ 619.900</h6>
             </div>
 
             <div class="card oculto">
-                <img src="/assets/img/compu2.png" alt="Notebook en stock">
+                <img src="../assets/img/compu2.png" alt="Notebook en stock">
                 <h5>Notebook Acer Aspire Ryzen 7 5700u 16gb 512gb 15,6' Fhd Gris Color Plateado</h5>
                 <h6>$ 1.157.990</h6>
             </div>
 
             <div class="card oculto">
-                <img src="/assets/img/compu3.png" alt="Notebook en stock">
+                <img src="../assets/img/compu3.png" alt="Notebook en stock">
                 <h5>Notebook Asus Vivobook Intel Core I5 1235u, 16gb, 256gb Ssd, Pantalla 15.6 Full Hd, Windows 11</h5>
                 <h6>$ 997.399</h6>
             </div>
 
             <div class="card oculto">
-                <img src="/assets/img/compu4.png" alt="Notebook en stock">
+                <img src="../assets/img/compu4.png" alt="Notebook en stock">
                 <h5>Notebook Asus Vivobook Go 15 Intel Core I3 256gb 8gb</h5>
                 <h6>$ 640.000</h6>
             </div>
 
             <div class="card oculto">
-                <img src="/assets/img/compu5.png" alt="Notebook en stock">
+                <img src="../assets/img/compu5.png" alt="Notebook en stock">
                 <h5>Notebook Lenovo Celeron N4020 4gb 128gb 14'' Win 11 Blue</h5>
                 <h6>$ 438.000</h6>
             </div>
 
             <div class="card oculto">
-                <img src="/assets/img/compu6.png" alt="Notebook en stock">
+                <img src="../assets/img/compu6.png" alt="Notebook en stock">
                 <h5>Notebook Hp Intel Core I3, DDR4 8gb Ram, 256gb Ssd, Windows 11, Patalla 14 Hd, Moonlight Blue</h5>
                 <h6>$ 859.950</h6>
             </div>
 
             <div class="card oculto">
-                <img src="/assets/img/compu7.png" alt="Notebook en stock">
+                <img src="../assets/img/compu7.png" alt="Notebook en stock">
                 <h5>Notebook Lenovo Ideapad 1 Amd Ryzen 5 5500u 16gb De Ram 512gb Ssd Color Abyss Blue</h5>
                 <h6>$ 800.000</h6>
             </div>
 
             <div class="card oculto">
-                <img src="/assets/img/compu8.png" alt="Notebook en stock">
+                <img src="../assets/img/compu8.png" alt="Notebook en stock">
                 <h5>Notebook Wings Nuvobook Intel Core I7 16gb De Ram 512gb Ssd 14 Pulgadas Windows 11 Home</h5>
                 <h6>$ 839.999</h6>
             </div>
 
             <div class="card oculto">
-                <img src="/assets/img/compu9.png" alt="Notebook en stock">
+                <img src="../assets/img/compu9.png" alt="Notebook en stock">
                 <h5>Notebook Samsung Galaxy Book3 Pro Intel I7 13va 16gb 1tb Ssd Color Graphite</h5>
                 <h6>$ 1.389.999</h6>
             </div>
